--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,161 @@
-h1 {
-	font-size: 30px
+/*RESET STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+body,
+h1,
+ul {
+  margin: 0;
 }
 
-p {
-	font-size: 12px;
+li {
+  list-style-type: none;
 }
+
+h1 {
+  font-size: 1.5rem;
+}
+
+a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+/* BODY Styles */
+
+body {
+  background: #f1f1f1;
+  color: #272626;
+  font: 1em "Noto Sans", sans-serif;
+}
+
+
+/* HEADER STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+header {
+  position: fixed;
+  width: 100%;
+  padding: 20px;
+  top: 0;
+  
+  box-sizing: border-box;
+  background: #3b6bab;
+}
+
+nav {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  transition: align-items .3s;
+}
+
+
+
+.logo {
+
+  display: inline-block;
+  padding: 20px 30px;
+  margin: 10px 0 0 10px;
+  -webkit-transition: all .2s;
+  -moz-transition: all .2s;
+}
+
+
+
+ul {
+  display: flex;
+  margin: 50px 50px 0 0;
+  padding: 0;
+  transition: margin .2s;
+}
+
+li:not(:last-child) {
+  margin-right: 20px;
+}
+
+li a {
+  display: block;
+  padding: 10px 20px;
+}
+
+
+
+.toggle-menu {
+  box-shadow: none;
+  background: transparent;
+  border: 0;
+}
+
+.toggle-menu {
+  display: none;
+  font-size: 2rem;
+  color: #fff;
+  margin: 10px 10px 0 0;
+  transition: margin .2s;
+}
+
+.top-image {
+  
+  max-width: 100%;
+  height: auto;
+  
+}
+
+
+
+/* MAIN STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+main {
+  display: block;
+  padding: 0 20px;
+}
+
+
+/* STYLES FOR THE "scroll" CLASS
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.scroller {
+  box-shadow: 0 8px 5px 0 rgba(0, 0, 0, .2);
+}
+
+.scroller .logo {
+  padding: 10px 20px;
+  font-size: 1.5rem;
+}
+
+.scroller nav {
+  align-items: center;
+}
+
+.scroller .logo,
+.scroller ul,
+.scroller .toggle-menu {
+  margin: 0;
+}
+
+
+/* MQ STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+@media screen and (max-width: 1060px) {
+  header {
+    padding: 10px;
+  }
+  nav {
+    align-items: center;
+  }
+  ul {
+    display: none;
+  }
+  .logo {
+    max-width: 130px;
+    max-height: 100px;
+    margin: 5px 0 0 5px;
+  }
+  .toggle-menu {
+    display: block;
+  }
+}
+
+
